# product_classification

./: README.md  makefile  pyproject.toml
notebooks/: build_model.ipynb  data_exploration.ipynb
product_classification/: training.py  utils.py
tests/unit/: test_training.py  test_utils.py
