[tool.poetry]
name = "product_classification"
version = "0.0.1"
description = ""
authors = ["youness <dummuy@dummy.dummy>"]
packages = [
    { include = "product_classification"},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"