[tool.poetry]
name = "product_classification"
version = "0.0.1"
description = ""
authors = ["youness <dummuy@dummy.dummy>"]
packages = [
    { include = "product_classification"},
]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.3"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
lightgbm = "^3.3.2"
optuna = "^2.10.1"
scikit-learn = "^1.1.1"
ipywidgets = "^7.7.1"
plotly = "^5.9.0"
notebook = "^6.4.12"
networkx = "^2.8.4"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"